[project]
name = "market-research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.0",
    "html2text>=2025.4.15",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.0",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.9",
    "motor>=3.7.1",
    "dnspython>=2.0.0",
    "pinecone>=6.0.0",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.26",
    "tavily-python>=0.7.23",
    "uvicorn[standard]>=0.45.0",
    "langchain-experimental>=0.4.1",
]
